@@ -51,7 +51,7 @@
             <version>3.1.1</version>
         </dependency>
 
-        <!-- liquid -->
+        <!-- liquid-api -->
         <dependency>
             <groupId>io.zeroparadigm.liquid</groupId>
             <artifactId>liquid-common</artifactId>
@@ -88,7 +88,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.4</version>
                 <configuration>
+                    <jvmArguments>--add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+                        --add-opens java.base/java.math=ALL-UNNAMED</jvmArguments>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
